--- a/Assets/Scripts/RaveSurvival.asmdef
+++ b/Assets/Scripts/RaveSurvival.asmdef
@@ -1,10 +1,12 @@
 {
-    "name": "FizzySteamworks",
+    "name": "RaveSurvival",
     "rootNamespace": "",
     "references": [
-        "GUID:68bd7fdb68ef2684e982e8a9825b18a5",
+        "GUID:2bafac87e7f4b9b418d9448d219b01ab",
         "GUID:30817c1a0e6d646d99c048fc403f5979",
-        "GUID:c4693ae76618c3e4aa5d10a4721a1307"
+        "GUID:6055be8ebefd69e48b49212b09b47b2f",
+        "GUID:627104647b9c04b4ebb8978a92ecac63",
+        "GUID:68bd7fdb68ef2684e982e8a9825b18a5"
     ],
     "includePlatforms": [
         "Editor",
